<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="756px"
    android:layout_height="536px"
    android:orientation="vertical"
    android:background="@android:color/black">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_text_logupload"
            android:textColor="#DAFFFFFF"
            android:textSize="36px" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/log_pd_waiting"
                    android:layout_width="140px"
                    android:layout_height="140px"
                    android:indeterminateDrawable="@drawable/myprogressbar"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/log_ima_waiting"
                    android:layout_width="140px"
                    android:layout_height="140px"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:alpha="1.0"
                    android:background="@drawable/ic_dialog_safe"
                    android:scaleType="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <TextView
                android:id="@+id/log_tv_wainting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18px"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/log_text_please_wait"
                android:textColor="@color/log_textColor"
                android:textSize="36px"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/log_pd_collecting"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/log_ima_collecting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_dialog_safe"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    tools:layout_editor_absoluteY="159dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/log_text_collect_log"
                android:textColor="@color/upload_tipcolor"
                android:textSize="30px"
                tools:layout_editor_absoluteY="166dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/log_pd_compressing"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/log_ima_compressing"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_dialog_safe"
                    android:visibility="invisible"
                    tools:layout_editor_absoluteY="159dp" />


            </FrameLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/log_text_compress"
                android:textColor="@color/upload_tipcolor"
                android:textSize="30px"
                tools:layout_editor_absoluteY="166dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/log_pd_uploading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp" />

                <ImageView
                    android:id="@+id/log_ima_uploading"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_dialog_safe"
                    android:visibility="invisible"
                    tools:layout_editor_absoluteY="159dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/log_text_loguploading"
                android:textColor="@color/upload_tipcolor"
                android:textSize="30px"
                tools:layout_editor_absoluteY="166dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <include
                layout="@layout/logupload_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <include
                layout="@layout/logupload_retry_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:visibility="visible"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="2dp" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
